fix: spacing

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -86,6 +86,7 @@
     padding: 10px;
     border-bottom: 1px solid black;
     background: white;
+    margin: 0;
   }
 
   .grail-builder__tokens {
